test/files/neg/t6962.scala
trait Foo {
  def sth() {
    crashes()
  }
  protected[Bar] def crashes(withDefaultParam: Boolean = true) { }
}
